week7/pipeline-demo/manifests/demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels: 
    name: demo-app
spec:
  replicas: 2
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-container
        image: kth844/pinpoint-demo:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /logs
            name: logs
        imagePullPolicy: Always
      volumes:
        - name: logs
          emptyDir: {}
