week7/pipeline-demo/manifests/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
